--- a/style.css
+++ b/style.css
@@ -597,16 +597,7 @@ h3 {
   color: #fff;
 }
 
-.navbar .menu-toggle {
-  display: none !important;
-  width: 0 !important;
-  height: 0 !important;
-  padding: 0 !important;
-  margin: 0 !important;
-  border: none !important;
-  position: absolute !important;
-  visibility: hidden !important;
-}
+/* navbar .menu-toggle removed to avoid mobile-specific selectors */
 
 main.content {
   width: 1000px;
